Using horizontal & vertical layouts for ZoneGraph (#518)
* Horizontal Layout for ZoneGraph : first try

* ZoneGraph : fix all snakelines

* ZoneGraph : reduce duplication

* ZoneGraph : reduce duplication

* Vertical Layout for ZoneGraph : first try

* ZoneGraph : reduce duplication

* Add facingNodes method on VerticalZoneLayout

* Add HDVC line management into ZoneGraph

* Reduce dupplication with static methods

* Reduce dupplication with default interface implementation

* Fix code smell (Method has 8 parameters, which is greater than 7 authorized)

* Add snakeline on TieLines & DanglingLines in ZoneGraph

* Take into account MR comments

* Move createDiamond method to Networks

* Remove Dangling Line management (no snakeline if not paired)

* Fix code smells

* Zone Network Graph Builder : add missing test case

* ZoneRawBuilder : horizontal case

* Zone Raw Graph Builder : add missing test case

* Add AbstractBaseLayout in place of VerticalLayout & HorizontalLayout interfaces

* Remove duplication

* Fix bugs

* Remove FIXME : manage line between substations in RawGraphBuilder

* Remove code duplication

* Fix rebase issues

* Fix code smell: duplication

* Draw line between substations but missing 2wt and 3wt

* Remove duplication code

* Fix code smell

* Fix code smell: duplication

* Fix error message

* Do not create 2tw & 3wt between substations

* Add HVDC case for Zone Raw Graph

* Revert changes on Substation layouts

* Use template for graph

* Refactor Horizontal zone layout

* Only use Vertical layouts together & Horizontal layouts together

* Reduce code duplication

* Fix checkstyle

* Adding crossover layouts cases

* Add method to move Substation & fix VerticalZoneLayout::adaptPaddingToSnakeLines

---------

Signed-off-by: Thomas ADAM <tadam@silicom.fr>